<resources>
    <string name="app_name">GamesApp</string>
    <string name="email">Email</string>
    <string name="email_hint">test@email.com</string>
    <string name="password">Password</string>
    <string name="password_hint">*******</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered yet? Click here to register!</string>
    <string name="logout">Logout</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="first_name_hint">John</string>
    <string name="last_name_hint">Doe</string>
    <string name="age_hint">25</string>
    <string name="error_string">This field cannot be empty!</string>
    <string name="email_error">Email not valid!</string>
    <string name="diff_passwords">Passwords do not match!</string>
    <string name="user_created">User successfully created</string>
    <string name="db_error">Could not insert into db. Please try again!</string>
    <string name="search_hint">Example: Assassins</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="played">Played</string>
    <string name="toPlay">To play</string>
    <string name="storyline">Storyline</string>
    <string name="summary">Summary</string>
    <string name="remove_fav">Game removed from favorites</string>
    <string name="add_to_played">Game added to played games</string>
    <string name="game_added">Game successfully added</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
