<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/emptystar"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_played"
            android:icon="@drawable/played"
            android:title="@string/played" />
        <item
            android:id="@+id/nav_toPlay"
            android:icon="@drawable/toplay"
            android:title="@string/toPlay" />
    </group>

</menu>
