<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_favourites">

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.vladimir.gamesapp.Fragment.favourites.FavouritesFragment"
        android:label="@string/favourites" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.vladimir.gamesapp.Fragment.searchGames.SearchGamesFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_played"
        android:name="com.vladimir.gamesapp.Fragment.played.PlayedFragment"
        android:label="@string/played"
        tools:layout="@layout/fragment_played" />

    <fragment
        android:id="@+id/nav_toPlay"
        android:name="com.vladimir.gamesapp.Fragment.toPlay.ToPlayFragment"
        android:label="@string/toPlay"
        tools:layout="@layout/fragment_to_play" />

</navigation>